--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,56 @@ body {
   color: #FFFFFF;
   background-color: #101932;
 }
+
+.header {
+  margin: 0 auto;
+  max-width: 1736px;
+}
+.header .header__menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header .header__menu .header__nav__logo {
+  display: flex;
+}
+.header .header__menu .header__nav__logo .nav__text__logo {
+  font-family: "Nunito", sans-serif;
+  margin-left: 15px;
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 34px;
+}
+.header .header__menu .header__nav__logo .nav__text__logo .text__logo__red {
+  color: #E11D2E;
+}
+.header .header__menu .nav__row {
+  max-width: 1063px;
+}
+.header .header__menu .nav__row .nav__item {
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.header .header__menu .nav__row .nav__item:hover {
+  color: #E11D2E;
+}
+.header .header__menu .nav__btn__join {
+  background: #AC1216;
+  border-radius: 10px;
+  border-style: none;
+  padding: 11px 30px;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+.header .header__menu .nav__btn__join:hover {
+  background: #800d11;
+}
+.header .header__menu .nav__btn__join:focus {
+  background: #5d090c;
+}
