--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 body{
+    
     font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -6,3 +7,62 @@ body{
     color: #FFFFFF;
     background-color: #101932;
 }
+.header{
+    margin: 0 auto;
+    max-width: 1736px;
+    .header__menu{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .header__nav__logo {
+            display: flex;
+            .nav__text__logo {
+                font-family: 'Nunito', sans-serif;
+                margin-left: 15px;
+                font-weight: 800;
+                font-size: 25px;
+                line-height: 34px;
+                .text__logo__red{
+                    color: #E11D2E;
+                }
+            }
+        }
+        .nav__row{
+            max-width: 1063px;
+            .nav__item {
+                font-weight: 600;
+                font-size: 17px;
+                line-height: 20px;
+                text-decoration: none;
+                color: #FFFFFF;
+            }
+            .nav__item:hover{
+                color: #E11D2E
+            }
+        }
+        .nav__btn__join {
+            background: #AC1216;
+            border-radius: 10px;
+            border-style: none;
+            padding: 11px 30px;
+            font-weight: 600;
+            font-size: 15px;
+            line-height: 18px;
+            color: #FFFFFF;
+            cursor: pointer;
+        }
+        .nav__btn__join:hover{
+            background: #800d11;
+        }
+        .nav__btn__join:focus{
+            background: #5d090c;
+        }
+    }
+}
+
+
+
+
+
+
+
